--- a/data/nlu/course_selection.yml
+++ b/data/nlu/course_selection.yml
@@ -101,6 +101,7 @@ nlu:
 
   - intent: 选课事宜/其他
     examples: |
+      - 选课相关问题
       - 哪里能查询到专业课介绍的内容
       - 是否课程号一样的mooc可替代公共必修
       - Bb上发布的作业哪里看
