--- a/data/nlu/employment_guidance.yml
+++ b/data/nlu/employment_guidance.yml
@@ -3,10 +3,10 @@ nlu:
 
   - intent: 就业指导/修改资源信息
     examples: |
+      - 怎么修改毕业生资源信息？
       - 修改资源信息
       - 修改毕业生资源信息
       - 怎么修改毕业生资源信息
-      - 怎么修改毕业生资源信息？
       - 如何修改毕业生资源信息
       - 我要修改毕业生资源信息
 
@@ -25,9 +25,9 @@ nlu:
 
   - intent: 就业指导/申请改派
     examples: |
+      - 毕业生怎么申请改派？
       - 毕业生申请改派
       - 毕业生改派
-      - 毕业生怎么申请改派？
       - 怎么申请改派
       - 申请改派
 
@@ -147,6 +147,7 @@ nlu:
 
   - intent: 就业指导/其他
     examples: |
+      - 就业指导相关问题
       - 创业
       - 报到证
       - 求职创业补贴
