--- a/data/nlu/graduate_admission.yml
+++ b/data/nlu/graduate_admission.yml
@@ -40,6 +40,7 @@ nlu:
 
   - intent: 研究生招生/其他
     examples: |
+      - 研究生招生相关问题
       - 研招网上的考生信息填写中的“符合报考条件的最后学历毕业专业”，没有“微电子科学与工程”专业，应该怎样填写。
       - 考生档案所在单位名称和地址（详细到门牌号），应该怎样填写。
       - 哪里有学术型硕士研究生毕业要求的详细说明？具体发几篇文章、期刊的标准，还有作者的排序之类的
