--- a/data/nlu/hospital.yml
+++ b/data/nlu/hospital.yml
@@ -12,6 +12,7 @@ nlu:
 
   - intent: 校医院/其他
     examples: |
+      - 校医院相关问题
       - 请问，在深的三天三检的具体要求是什么，是按照日期来连续三天每天做一次核酸，还是做核酸的时间必须间隔24小时？
       - 加强针疫苗
       - 请问粤海校区，元平的加强针接种的时间安排是什么呀？
