--- a/data/nlu/makeup_exam.yml
+++ b/data/nlu/makeup_exam.yml
@@ -8,6 +8,7 @@ nlu:
 
   - intent: 补考缓考/其他
     examples: |
+      - 补考缓考相关问题
       - 期末考被退出来了，然后被交卷了，零分，能不能重考
       - 补考成绩什么时候可以出
       - 补考缓考相关问题
