--- a/data/nlu/network.yml
+++ b/data/nlu/network.yml
@@ -42,6 +42,7 @@ nlu:
 
 - intent: 校园网服务/其他
   examples: |
+    - 校园网相关问题
     - 我的VPN功能好像比较落后，跟老师发过来的vpn界面截图比较少了很多功能
     - 我用各种浏览器进入内部网的办事大厅登陆后后选择任意模块都显示系统异常。所有功能都用不了
     - 苹果手机电脑如何连接学校里的wifi
