--- a/data/nlu/scholarship.yml
+++ b/data/nlu/scholarship.yml
@@ -3,12 +3,14 @@ nlu:
 
   - intent: 奖助学金/生源地贷款何时发放
     examples: |
+      - 生源地贷款何时发放？
       - 生源地贷款何时发放
       - 国家生源地贷款何时发放
       - 什么时候发生源地贷款？
 
   - intent: 奖助学金/其他
     examples: |
+      - 奖助学金相关问题
       - 困难认定取消后可以重新申请吗
       - 因为休学导致研究生延毕，研究生补助是否会发放
       - 研究生补助
