--- a/data/nlu/specialty.yml
+++ b/data/nlu/specialty.yml
@@ -2,6 +2,7 @@ version: "2.0"
 nlu:
   - intent: 专业修读/取消双学位
     examples: |
+      - 怎么取消双学位？
       - 取消双学位
       - 怎么取消双学位
       - 可以取消双学位吗
@@ -17,6 +18,7 @@ nlu:
 
   - intent: 专业修读/转专业报名
     examples: |
+      - 转专业报名在哪里呀？
       - 转专业报名
       - 我想问一下转专业报名在哪里呀？谢谢！
       - 转专业报名在哪里呀
@@ -25,6 +27,7 @@ nlu:
 
   - intent: 专业修读/其他
     examples: |
+      - 专业修读相关问题
       - 除了人工智能的智慧医疗外，医学部还有啥微专业。还是说目前就这一个？
       - 播音主持专业的专业代码是多少
       - 想请问辅修学分不满会影响毕业吗？
