--- a/data/nlu/teaching_affairs.yml
+++ b/data/nlu/teaching_affairs.yml
@@ -21,6 +21,7 @@ nlu:
 
 - intent: 教学教务/缴学杂费
   examples: |
+    - 怎么（补）缴学杂费？
     - 怎么缴学杂费？
     - 怎么缴学杂费
     - 缴学杂费
@@ -39,6 +40,7 @@ nlu:
 
 - intent: 教学教务/百度文库
   examples: |
+    - 怎么免费下载百度文库的资料？
     - 怎么免费下载百度文库的资料
     - 下载百度文库的资料
     - 百度文库使用方法
@@ -48,6 +50,7 @@ nlu:
 
 - intent: 教学教务/其他
   examples: |
+    - 教学教务相关问题
     - 大二可以参加实习吗？实习的单位一定要找学院指定的单位吗？自己找的单位可以吗？
     - 带有个人信息的放假证明在学院的哪个部门可以开？
     - 现实表现及鉴定要在哪里开？
