--- a/data/nlu/general.yml
+++ b/data/nlu/general.yml
@@ -197,6 +197,12 @@ nlu:
     - 不是
     - 不是这个
     - 不是这个回答
+    - 我不是想问这个
+    - 不是这个回答
+    - 我不是要问这个
+    - 不是我要的答案
+    - 不是我想问的
+    - 不是问这个
     - 都不是
     - 都不是我想问的
     - 不是啊
