--- a/data/nlu/student_id.yml
+++ b/data/nlu/student_id.yml
@@ -246,6 +246,7 @@ nlu:
 - intent: 学生证件/其他
   examples: |
     - 学生证件相关问题
+    - 校园卡和银行卡账户绑定
     - 金融社保卡丢失重新办理
     - 金融社保卡丢失如何重新办理
     - 能提前领取毕业证吗？
