--- a/endpoints.yml
+++ b/endpoints.yml
@@ -11,17 +11,17 @@
 # https://rasa.com/docs/rasa/custom-actions
 
 action_endpoint:
-  url: "http://localhost:5055/webhook"
+  url: "http://172.17.0.3:5055/webhook"
 
 # Tracker store which is used to store the conversations.
 # By default the conversations are stored in memory.
 # https://rasa.com/docs/rasa/tracker-stores
 
-#tracker_store:
-#    type: redis
-#    url: <host of the redis instance, e.g. localhost>
-#    port: <port of your redis instance, usually 6379>
-#    db: <number of your database within redis, e.g. 0>
+tracker_store:
+    type: redis
+    url: 172.17.0.5
+    port: 6379
+    db: 2
 #    password: <password used for authentication>
 #    use_ssl: <whether or not the communication is encrypted, default false>
 
