--- a/endpoints.yml
+++ b/endpoints.yml
@@ -11,6 +11,7 @@
 # https://rasa.com/docs/rasa/custom-actions
 
 action_endpoint:
+#  url: "http://172.17.0.3:5056/webhook"
   url: "http://172.17.0.3:5055/webhook"
 
 # Tracker store which is used to store the conversations.
