添加es服务 删除qa服务多线程 开启rasa多线程(10个)

--- a/endpoints.yml
+++ b/endpoints.yml
@@ -41,3 +41,9 @@ tracker_store:
 #  username: username
 #  password: password
 #  queue: queue
+
+lock_store:
+    type: redis
+    url: 172.17.0.5
+    port: 6379
+    db: 10
