--- a/data/nlu/responses/responses.yml
+++ b/data/nlu/responses/responses.yml
@@ -60,7 +60,7 @@ responses:
     - text: "<div class='msg-text'>心理咨询的服务对象是在学习、人际、情感等日常生活方面遇到困扰的正常群体。任何人在生活中遇到困惑、想要自我成长的时候都可以借助心理咨询的力量。心理咨询的优势在于会有一个专业的陪伴者跟你沟通、交流，共同成长。心理咨询并非精神障碍诊断与治疗，如涉及心理障碍或精神疾病，则需要专科就医，及时寻求医疗帮助。</div>"
 
   utter_后勤服务/心理咨询地址:
-    - text: "<div class='msg-text'>粤海校区：海滨游泳馆2-3楼、石头坞2楼<br>
+    - text: "<div class='msg-text'>粤海校区：南区致真楼L6-408，咨询预约室408-1，预约来访同学请到此地点等候。<br>
              丽湖校区：体育馆116-125</div>"
 
   utter_后勤服务/心理咨询预约方式:
