--- a/data/nlu/general.yml
+++ b/data/nlu/general.yml
@@ -159,59 +159,31 @@ nlu:
 
 - intent: deny
   examples: |
-    - 不是
-    - NO
-    - No
-    - No.
-    - no
-    - 我不想
-    - 我不想说
-    - 我不会给你的
-    - 不
-    - 不，不想要这个！
-    - 绝不
-    - 不，谢谢
-    - 不，不是这个答案。
-    - 不。
-    - 当然不
-    - 否定
-    - 我拒绝
-    - 我不喜欢这个
-    - 我不这么认为
-    - 恐怕不是
-    - 我不确定
-    - 糟透了
-    - 不适合我
-    - 不行
-    - 没门
-    - 不！！！！
-    - 你是个白痴
-    - 没有
-    - 不！
-    - 一点也不顺利
-    - 抱歉现在不行
-    - 还是不想说
-    - 谢谢，但不了
-    - 这糟透了
-    - 我不同意
-    - 不是
     - 不是这个
     - 不是这个回答
     - 我不是想问这个
-    - 不是这个回答
     - 我不是要问这个
     - 不是我要的答案
     - 不是我想问的
     - 不是问这个
     - 都不是
     - 都不是我想问的
-    - 不是啊
-    - 不太清楚
-    - 不清楚
-    - 不知道
-    - 不需要
-    - 不要
-    - 不用
+    - 这是去年的了
+    - 这都是去年的了
+    - 这些都是好久的记录了
+    - 有没有最新消息
+    - 有没有最新消息？
+    - 有最新消息吗
+    - 有最新消息吗？
+    - 有最新通知吗？
+    - 这是去年的了，有没有最新的回复
+    - 这是好久的了，有没有最新的回复
+    - 有没有最新的回复
+    - 这个答案时间太久了
+    - 这个回复太旧了了
+    - 这个回复是19年的了
+    - 这个是20年的回复了
+    - 这是21年的回复了
 
 - intent: greet
   examples: |
