--- a/data/rules/rules.yml
+++ b/data/rules/rules.yml
@@ -82,15 +82,43 @@ rules:
       - intent: 常用联系方式
       - action: action_trigger_response_selector
 
-  - rule: out of scope
-    steps:
-      - intent: out_of_scope
-      - action: action_trigger_response_selector
-
   - rule: 查询天气
     steps:
       - intent: 查询天气
       - action: FindTheCorrespondingweather
 
+  - rule: out of scope
+    steps:
+      - intent: out_of_scope
+      - action: utter_out_of_scope
 
+  - rule: bye
+    steps:
+      - intent: bye
+      - action: utter_bye
+
+  - rule: canthelp
+    steps:
+      - intent: canthelp
+      - action: utter_canthelp
+
+  - rule: human_handoff
+    steps:
+      - intent: human_handoff
+      - action: utter_contact_human
+
+  - rule: react_negative
+    steps:
+      - intent: react_negative
+      - action: utter_react_negative
+
+  - rule: react_positive
+    steps:
+      - intent: react_positive
+      - action: utter_react_positive
+
+  - rule: thank
+    steps:
+      - intent: thank
+      - action: utter_noworries
 
